update to API practice

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -134,28 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9b733395",
+   "execution_count": 18,
+   "id": "5070ad08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=81b1cd2cf2203d5ef359dcbf207b4a8b&q=Boston\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "print(city_url)"
+    "city_url = url + \"&q=\" + \"Boston\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87a6348",
+   "id": "727cfa86",
    "metadata": {},
    "outputs": [],
    "source": []
