--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f50f755b",
+   "id": "217bea01",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "174cd803",
+   "id": "375a4f29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5b87e6d",
+   "id": "8ce37bb9",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bff6371e",
+   "id": "176576dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bf17596c",
+   "id": "f3823bc6",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f2329bb7",
+   "id": "0214bd45",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7430817c",
+   "id": "87d54a75",
    "metadata": {},
    "outputs": [
     {
@@ -1238,8 +1238,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "02aef288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the output file (CSV).\n",
+    "output_data_file = \"weather_data/cities.csv\"\n",
+    "# Export the City_Data into a CSV.\n",
+    "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4505c328",
+   "id": "b587d48d",
    "metadata": {},
    "outputs": [],
    "source": []
